test_regress/t/t_inst_missing_dot_bad.out
%Error: t/t_inst_missing_dot_bad.v:9:20: Dotted reference to instance that refers to missing module/interface: 'missing'
    9 |     $display("a=", missing.a);
      |                    ^~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_inst_missing_dot_bad.v:9:28: Can't find definition of 'a' in dotted variable/method: 'missing.a'
    9 |     $display("a=", missing.a);
      |                            ^
%Error: Exiting due to
